dnl  $OpenXM: OpenXM/src/kan96xx/trans/configure.in,v 1.2 2003/12/04 07:54:51 takayama Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done


AC_INIT(tree2polymake.c,1.1)
AC_PREREQ(2.72)
AC_CANONICAL_TARGET
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_YACC

AC_CHECK_FUNC(socket)
if test "$ac_cv_func_socket" = no ; then
  AC_CHECK_LIB(socket,socket)
fi
AC_CHECK_FUNC(gethostbyname)
if test "$ac_cv_func_gethostbyname" = no ; then
  AC_CHECK_LIB(nsl,gethostbyname)
fi
AC_CHECK_FUNC(dlopen)
if test "$ac_cv_func_dlopen" = no ; then
  AC_CHECK_LIB(dl,dlopen)
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
